--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,18 @@
         <artifactId>log4j-core</artifactId>
         <version>2.24.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>13.0</version>
+        <scope>compile</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>3.7</version>
+    </dependency>
 
 
 </dependencies>
